# Cpp-project

./: .gitignore  .gitmodules  README.md
InversePendle/: .gitignore  CMakeLists.txt  InversePendulum.cpp  Object.cpp  Object.h  Objects.h  Platform.cpp  Platform.h  README.md  Simulator.cpp  Simulator.h  Stick.cpp  Stick.h  config.txt  main.cpp  structs.h  vcpkg.json
InversePendle/headers/: Config.h  Controller.h  EventHandler.h  InversePendulum.h  Object.h  PID.h  Simulator.h  SlidingMode.h  Stick.h  structs.h
InversePendle/src/: Controller.cpp  InversePendulum.cpp  Object.cpp  PID.cpp  Platform.cpp  Simulator.cpp  SlidingMode.cpp  Stick.cpp  main.cpp
InversePendle2/: Objects.cpp  Simulator.h  main.cpp
Sudoku/: CMakeLists.txt  main.cpp
Sudoku/header/: SudokuChecker.h  SudokuGenerator.h
Sudoku/src/: SudokuField.cpp  SudokuGenerator.cpp
Sudoku2/header/: SudokuField.h
Sudoku2/src/: SudokuChecker.cpp
SudokuSolver/: .gitignore  CMakeLists.txt  SudokuDummy.txt  main.cpp  structs.h
TicTacToe/: CMakeLists.txt  main.cpp
emulator-6502/: .gitignore  CMakeLists.txt  vcpkg.json
emulator-6502/include/: config.hpp
emulator-6502/include/cpu/: cpu.hpp
emulator-6502/include/platform/: graphics.hpp  rom_loader.hpp
emulator-6502/src/: main.cpp
emulator-6502/src/cpu/: cpu.cpp  cpu.h
emulator-6502/src/platform/: graphics.cpp
emulator-6502/tests/: test_timendus.cpp
emulator-chip8/: CMakeLists.txt  vcpkg.json
emulator-chip8/include/: config.hpp
emulator-chip8/include/cpu/: cpu.hpp
emulator-chip8/include/platform/: graphics.hpp  keyboard_input.hpp
emulator-chip8/src/: main.cpp
emulator-chip8/tests/: test_timendus.cpp
fft/: CMakeLists.txt  main.cpp
inverse-pendle/: CMakeLists.txt  README.md
inverse-pendle/headers/: Object.h  PID.h  Platform.h  Simulator.h
inverse-pendle/src/: PID.cpp  Stick.cpp  main.cpp
is-anagram/: main.cpp
isAnagram/: CMakeLists.txt
motion-planning/: CMakeLists.txt  readme.md  vcpkg.json
motion-planning/docs/: journal.md
motion-planning/src/: main.cpp
motion-planning/src/planners/: path_planner.hpp
motion-planning/src/simulation/: car.hpp  environment.cpp  vehicle.hpp
motion-planning/src/visualization/: visualizer.cpp
motion_planning/: .gitignore  CMakeLists.txt  CMakePresets.json  journal.md  readme.md
motion_planning/docs/: journal.md
motion_planning/src/: main.cpp
motion_planning/src/planners/: path_planner.cpp
motion_planning/src/simulation/: car.cpp  environment.hpp
motion_planning/src/visualization/: visualizer.cpp  visualizer.hpp
motion_planning/tests/: test_car.cpp
tic-tac-toe/: CMakeLists.txt
twoSum/: CMakeLists.txt  main.cpp
